--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@
 
 ENVIRON=mainnet
 
-CHAIN_ID='secret-2'
+CHAIN_ID='secret-3'
 CHAIN_NAME='Secret Network'
 
 SIENNA_CONTRACT=secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4
@@ -22,3 +22,6 @@ SECRET_LCD=https://api.secretapi.io
 SECRET_RPC=https://rpc.secretapi.io
 
 
+
+# SECRET_RPC=https://chainofsecrets.secrettestnet.io:26667
+# SECRET_LCD=https://chainofsecrets.secrettestnet.io
