--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-saga": "1.1.3",
-    "secretjs": "0.11.0",
+    "secretjs": "^0.11.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
