--- a/.env.development
+++ b/.env.development
@@ -18,8 +18,8 @@ CHAIN_NAME='Secret Network'
 SIENNA_CONTRACT=secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4
 MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
 
-SECRET_LCD=https://api.secretapi.io
-SECRET_RPC=https://rpc.secretapi.io
+SECRET_LCD=https://bridgeapi.azure-api.net
+SECRET_RPC=https://bridgeapi.azure-api.net/rpc
 
 
 
