--- a/.env.mainnet
+++ b/.env.mainnet
@@ -6,8 +6,8 @@ CHAIN_NAME='Secret Network'
 SIENNA_CONTRACT=secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4
 MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
 
-# SECRET_LCD=https://bridgeapi.azure-api.net
-# SECRET_RPC=https://bridgeapi.azure-api.net/rpc
+SECRET_LCD=https://bridgeapi.azure-api.net
+SECRET_RPC=https://bridgeapi.azure-api.net/rpc
 
-SECRET_LCD=https://bridgeapi.azure-api.net/proxy
-SECRET_RPC=https://bridgeapi.azure-api.net/proxy-rpc
+# SECRET_LCD=https://bridgeapi.azure-api.net/proxy
+# SECRET_RPC=https://bridgeapi.azure-api.net/proxy-rpc
