Show claim amounts

--- a/.env.development
+++ b/.env.development
@@ -1,21 +1,24 @@
-ENVIRON=development
+# ENVIRON=development
 
-CHAIN_ID=holodeck-2
-CHAIN_NAME=holodeck-2
+# CHAIN_ID=holodeck-2
+# CHAIN_NAME=holodeck-2
 
-SIENNA_CONTRACT=secret14kh0teacyyz8vfwavl823xyfcwplhhmq4rzayg
-MGMT_CONTRACT=secret1ng5c437h3zvnp2qklapxmes88zysdf5xptk24d
+# SIENNA_CONTRACT=secret14kh0teacyyz8vfwavl823xyfcwplhhmq4rzayg
+# MGMT_CONTRACT=secret1ng5c437h3zvnp2qklapxmes88zysdf5xptk24d
 
-SECRET_RPC=https://chainofsecrets.secrettestnet.io:26667
-SECRET_LCD=https://chainofsecrets.secrettestnet.io
+# SECRET_RPC=https://chainofsecrets.secrettestnet.io:26667
+# SECRET_LCD=https://chainofsecrets.secrettestnet.io
 
-# ENVIRON=mainnet
+ENVIRON=mainnet
 
-# CHAIN_ID='secret-3'
-# CHAIN_NAME='Secret Network'
+CHAIN_ID='secret-3'
+CHAIN_NAME='Secret Network'
 
-# SIENNA_CONTRACT=secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4
-# MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
+SIENNA_CONTRACT=secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4
+MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
 
-# SECRET_LCD=https://bridgeapi.azure-api.net
-# SECRET_RPC=https://bridgeapi.azure-api.net/rpc
+SECRET_LCD=https://bridgeapi.azure-api.net
+SECRET_RPC=https://bridgeapi.azure-api.net/rpc
+
+SECRET_LCD=https://api.secretapi.io
+SECRET_RPC=https://rpc.secretapi.io
