--- a/.env.mainnet
+++ b/.env.mainnet
@@ -10,5 +10,7 @@ MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
 #https://bridgeapi.azure-api.net
 #SECRET_RPC=https://bridgeapi.azure-api.net/rpc
 
-SECRET_LCD=https://bridgeapi.azure-api.net/proxy
-SECRET_RPC=https://bridgeapi.azure-api.net/proxy-rpc
+SECRET_LCD=https://bridgeapi.azure-api.net
+SECRET_RPC=https://bridgeapi.azure-api.net/rpc
+# SECRET_LCD=https://bridgeapi.azure-api.net/proxy
+# SECRET_RPC=https://bridgeapi.azure-api.net/proxy-rpc
