--- a/.env.mainnet
+++ b/.env.mainnet
@@ -10,7 +10,7 @@ MGMT_CONTRACT=secret1kn6kvc97nvu69dqten0w9p9e95dw6d6luv3dfx
 # SECRET_LCD_POST=https://cyclops-lcd.secret.llc
 
 SECRET_LCD=https://bridgeapi.azure-api.net/lb/lcd
-SECRET_RPC=hhttps://bridgeapi.azure-api.net/lb/rpc
+SECRET_RPC=https://bridgeapi.azure-api.net/lb/rpc
 
 #SECRET_LCD=https://bridge-api-manager.azure-api.net/
 #https://bridgeapi.azure-api.net
